# rust-software-render

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
media/: ring.3ds
media/monster/: diffuse.tga  monster.mtl
media/ring/: ring.mtl
media/skull/: skull.mtl
src/: device.rs  dll_import.rs  generator.rs  import3ds.rs  importobj.rs  main.rs  material.rs  memory.rs  mesh.rs  mesh3ds.rs  rasterization.rs  scene.rs  shader.rs  tests.rs  texture.rs  utils.rs  vector.rs
src/import/: header3ds.rs  import3ds.rs  importobj.rs  mod.rs  reader.rs
src/shader/: base.rs  external.rs  internal.rs  mod.rs  sh_cook_torrance.rs  sh_cubemap.rs  sh_default.rs  sh_lambert.rs  sh_normal.rs  sh_phong_blinn.rs
tests/: rasterization_test.rs
