[package]
name = "rust-software-render"
version = "0.4.0"
authors = ["ReanGD"]

[dependencies]
time = "0.1.32"
sdl2 = "0.9.1"
cgmath = "0.3.1"
libc = "0.1.10"
sdl2-sys = "0.6.2"
obj = "0.3.0"
genmesh = "0.3.*"

[dependencies.sdl2_image]
git = "https://github.com/xsleonard/rust-sdl2_image"
version = "0.3.0"
